// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Avatar Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <img
    alt="Avatar"
    className="container size-md"
    src="https://picsum.photos/id/1027/200/200"
  />
</div>
`;

exports[`Storyshots Atoms/Avatar Size 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <img
    alt="Avatar"
    className="container size-sm"
    src="https://picsum.photos/id/1027/200/200"
  />
  <img
    alt="Avatar"
    className="container size-md"
    src="https://picsum.photos/id/1027/200/200"
  />
  <img
    alt="Avatar"
    className="container size-lg"
    src="https://picsum.photos/id/1027/200/200"
  />
</div>
`;
